--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="logo de tranki punki">
+                    <img src="imagenes/tranki-punki-logo-header.svg" width="30" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,10 +48,10 @@
                         <a class="nav-link" href="prensa.html">PRENSA</a></li>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         CONTACTO
                         </a>
-                        <ul class="dropdown-menu menuDecoration" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu menu-decoration" aria-labelledby="">
                             <li><a class="dropdown-item" href="contacto.html">FORMULARIO</a></li>
                             <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=5493513448676&text=Hola%2C%20quisiera%20contactarme%20con%20la%20representante%20de%20la%20banda." target="_blank">WHATSAPP</a></li>
                         </ul>
@@ -64,38 +64,66 @@
     </header>
     <!-- Título Imagen Responsive -->
     <div class="titulo">
-        <h1><img class="titulo--sin-animacion" src="imagenes/Titulotrankipunki.png" alt="Biografía de Tranki Punki"></h1>
+        <h1><img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Biografía de Tranki Punki"></h1>
     </div> 
     <!-- Artículo BIO -->        
     <article class="articulo-bio">
         <h2>BIO</h2>
-        <p class="articulo-bio--texto-en-bloque">Tranki Punki es un a banda de <em>gypsy punk</em> nacida en 2013 en Córdoba, Argentina. Conformada por seis pibas y una vibrante combinación de distorsión y fiesta, se ha convertido en una de las propuestas más originales y convocantes de los escenarios locales, las marchas y los festivales vinculados a las problemáticas sociales actuales y laagenda feminista. Sus letras reflejan la realidad sociocultural, tocan temáticas feministas.</p>
-        <p class="articulo-bio--texto-en-bloque">Conformada por seis pibas y una vibrante combinación de distorsión y fiesta, se ha convertido en una de las propuestas más originales y convocantes de los escenarios locales, las marchas y los festivales vinculados a las problemáticas sociales actuales y la agenda feminista.</p>
-        <p class="articulo-bio--texto-en-bloque">En sus siete años de trayectoria, su ecléctica impronta musical le ha permitido compartir escenario con bandas nacionales e internacionales en festivales y eventos de distinto tipo.</p>
-        <p class="articulo-bio--texto-en-bloque">Su música fusiona el gypsy punk con otros géneros como reggae, dub, ska y hardcore, por lo que sus presentaciones en vivo son poderosas y efectivas para el pogo y el baile descontracturado.</p>
-        <p class="articulo-bio--texto-en-bloque">Después de editar en 2015 <strong>No me digas que no pasa nada</strong>, con presentaciones en Chile, Brasil y Uruguay, Tranki Punki lanzó su segundo disco titulado <strong>Marea Negra</strong> de la mano de <a href="https://futurock.fm/goza/" target="_blank">Goza Records.</a> Este disco representa una nueva etapa de la banda, definida por la madurez de su identidad musical.</p>
-        <p class="articulo-bio--texto-en-bloque">Su más reciente trabajo <strong>Tranki Punki en vivo en el CCK</strong>, es un EP del registro de la presentación llevada a cabo el 7 de marzo en la cúpula del Centro Cultural Kirchner en el marco del Ciclo Porque Sí.</p>
-        <p class="articulo-bio--texto-en-bloque">En este show, presentaron algunos temas de su último disco Marea Negra y repasaron parte del repertorio de No me digas que no pasa nada, su primer material discográfico.</p>
-        <p class="articulo-bio--texto-en-bloque">Este EP busca ser un fiel reflejo de la química que las integrantes del sexteto tienen en vivo, caracterizada por la fuerza y la fiesta que surge de sus letras y su punk cordobés.</p>
+        <p class="texto-en-bloque">Tranki Punki es una banda de <em>gypsy punk</em> nacida en 2013 en Córdoba, Argentina. Conformada por seis pibas y una vibrante combinación de distorsión y fiesta, se ha convertido en una de las propuestas más originales y convocantes de los escenarios locales, las marchas y los festivales vinculados a las problemáticas sociales actuales y laagenda feminista. Sus letras reflejan la realidad sociocultural, tocan temáticas feministas.</p>
+        <p class="texto-en-bloque">Conformada por seis pibas y una vibrante combinación de distorsión y fiesta, se ha convertido en una de las propuestas más originales y convocantes de los escenarios locales, las marchas y los festivales vinculados a las problemáticas sociales actuales y la agenda feminista.</p>
+        <p class="texto-en-bloque">En sus siete años de trayectoria, su ecléctica impronta musical le ha permitido compartir escenario con bandas nacionales e internacionales en festivales y eventos de distinto tipo.</p>
+        <p class="texto-en-bloque">Su música fusiona el gypsy punk con otros géneros como reggae, dub, ska y hardcore, por lo que sus presentaciones en vivo son poderosas y efectivas para el pogo y el baile descontracturado.</p>
+        <p class="texto-en-bloque">Después de editar en 2015 <strong>No me digas que no pasa nada</strong>, con presentaciones en Chile, Brasil y Uruguay, Tranki Punki lanzó su segundo disco titulado <strong>Marea Negra</strong> de la mano de <a href="https://futurock.fm/goza/" target="_blank">Goza Records.</a> Este disco representa una nueva etapa de la banda, definida por la madurez de su identidad musical.</p>
+        <p class="texto-en-bloque">Su más reciente trabajo <strong>Tranki Punki en vivo en el CCK</strong>, es un EP del registro de la presentación llevada a cabo el 7 de marzo en la cúpula del Centro Cultural Kirchner en el marco del Ciclo Porque Sí.</p>
+        <p class="texto-en-bloque">En este show, presentaron algunos temas de su último disco Marea Negra y repasaron parte del repertorio de No me digas que no pasa nada, su primer material discográfico.</p>
+        <p class="texto-en-bloque">Este EP busca ser un fiel reflejo de la química que las integrantes del sexteto tienen en vivo, caracterizada por la fuerza y la fiesta que surge de sus letras y su punk cordobés.</p>
     </article>
     <!-- Grid de integrantes -->
     <section class="seccion-integrantes">
         <h3>integrantes</h3>
-        <main class="seccion-integrantes__main">
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--todas"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-todas-relatos.jpg" alt="Tranki Punki"></div>
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--sofi"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-galeria-04.jpg" alt="Baterista de Tranki Punki" ></div> 
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--torchi"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-galeria-06.jpg" alt="Percusionista de Tranki Punki"></div>
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--tuky"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-tuky-marea.jpg" alt="Bajista de Tranki Punki"></div>
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--vicky"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-vicky-marea.jpg" alt="Guitarrista de Tranki Punki"></div>
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--pola"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-galeria-03.jpg" alt="Acordeonista de Tranki Punki"></div>
-            <div class="seccion-integrantes__main__integrante seccion-integrantes__main__integrante--drela"><img class="seccion-integrantes__main__integrante--crop" src="imagenes/galeria/tranki-punki-drela-relatos.jpg" alt="Violinista de Tranki Punki"></div>
+        <main class="main">
+            <div class="todas">
+                <a href="https://www.instagram.com/tranki_punki/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-todas-relatos.jpg" alt="Tranki Punki">
+                </a>
+            </div>
+            <div class="sofi">
+                <a href="https://www.instagram.com/ssofia.dem/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-galeria-04.jpg" alt="Baterista de Tranki Punki" >
+                </a>
+            </div> 
+            <div class="torchi">
+                <a href="https://www.instagram.com/riot_torchi/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-galeria-06.jpg" alt="Percusionista de Tranki Punki">
+                </a>
+            </div>
+            <div class="tuky">
+                <a href="https://www.instagram.com/tukron666/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-tuky-marea.jpg" alt="Bajista de Tranki Punki">
+                </a>
+            </div>
+            <div class="vicky">
+                <a href="https://www.instagram.com/vickybarturen/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-vicky-marea.jpg" alt="Guitarrista de Tranki Punki">
+                </a>
+            </div>
+            <div class="pola">
+                <a href="https://www.instagram.com/pola.kita/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-galeria-03.jpg" alt="Acordeonista de Tranki Punki">
+                </a>
+            </div>
+            <div class="drela">
+                <a href="https://www.instagram.com/drekulaa/" target="_blank">
+                    <img class="crop" src="imagenes/galeria/tranki-punki-drela-relatos.jpg" alt="Violinista de Tranki Punki">
+                </a>
+            </div>
         </main>
     </section>
     <!-- Pie de página -->
     <hr> 
     <footer>
         <p>Copyright © 2021 <strong>Tranki Punki</strong></p>
-        <p class="footer--textoderechos"><em>Todos los derechos reservados</em></p>
+        <p class="texto-derechos"><em>Todos los derechos reservados</em></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
