Figcaption en grid de BIO

--- a/bio.html
+++ b/bio.html
@@ -84,37 +84,58 @@
         <main class="main">
             <div class="todas">
                 <a href="https://www.instagram.com/tranki_punki/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-todas-relatos.jpg" alt="Tranki Punki">
+					<figure class="figurefx pushup">
+						<img class="crop" src="imagenes/galeria/tranki-punki-todas-relatos.jpg" alt="Tranki Punki">
+						<figcaption> @tranki_punki </figcaption>
+					</figure>
                 </a>
             </div>
             <div class="sofi">
                 <a href="https://www.instagram.com/ssofia.dem/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-galeria-04.jpg" alt="Baterista de Tranki Punki" >
+                    <figure class="figurefx pushup">
+                        <img class="crop" src="imagenes/galeria/tranki-punki-galeria-04.jpg" alt="Baterista de Tranki Punki" >
+                        <figcaption> @ssofia.dem </figcaption>
+                    </figure>
                 </a>
             </div> 
             <div class="torchi">
                 <a href="https://www.instagram.com/riot_torchi/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-galeria-06.jpg" alt="Percusionista de Tranki Punki">
+                    <figure class="figurefx pushup">
+                        <img class="crop" src="imagenes/galeria/tranki-punki-galeria-06.jpg" alt="Percusionista de Tranki Punki">
+                        <figcaption> @riot_torchi </figcaption>
+                    </figure>
                 </a>
             </div>
             <div class="tuky">
                 <a href="https://www.instagram.com/tukron666/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-tuky-marea.jpg" alt="Bajista de Tranki Punki">
+                    <figure class="figurefx pushup">
+                        <img class="crop" src="imagenes/galeria/tranki-punki-tuky-marea.jpg" alt="Bajista de Tranki Punki">
+                        <figcaption> @tukron666 </figcaption>
+                    </figure>
                 </a>
             </div>
             <div class="vicky">
                 <a href="https://www.instagram.com/vickybarturen/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-vicky-marea.jpg" alt="Guitarrista de Tranki Punki">
+                    <figure class="figurefx pushup">
+                        <img class="crop" src="imagenes/galeria/tranki-punki-vicky-marea.jpg" alt="Guitarrista de Tranki Punki">
+                        <figcaption> @vickybarturen </figcaption>
+                    </figure>
                 </a>
             </div>
             <div class="pola">
                 <a href="https://www.instagram.com/pola.kita/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-galeria-03.jpg" alt="Acordeonista de Tranki Punki">
+                    <figure class="figurefx pushup">
+                        <img class="crop" src="imagenes/galeria/tranki-punki-galeria-03.jpg" alt="Acordeonista de Tranki Punki">
+                        <figcaption> @pola.kita </figcaption>
+                    </figure>
                 </a>
             </div>
             <div class="drela">
                 <a href="https://www.instagram.com/drekulaa/" target="_blank">
-                    <img class="crop" src="imagenes/galeria/tranki-punki-drela-relatos.jpg" alt="Violinista de Tranki Punki">
+                    <figure class="figurefx pushup">
+                        <img class="crop" src="imagenes/galeria/tranki-punki-drela-relatos.jpg" alt="Violinista de Tranki Punki">
+                        <figcaption> @drekulaa </figcaption>
+                    </figure>
                 </a>
             </div>
         </main>
