--- a/bio.html
+++ b/bio.html
@@ -80,7 +80,8 @@
     </article>
     <!-- Grid de integrantes -->
     <section class="seccion-integrantes">
-        <h3>integrantes</h3>
+        <h3>Integrantes</h3>
+        <p class="texto-en-bloque-integrantes">Hacé click/tap en las imágenes de las integrantes y visitá sus perfiles de Instagram.</p>
         <main class="main">
             <div class="todas">
                 <a href="https://www.instagram.com/tranki_punki/" target="_blank">
@@ -142,7 +143,7 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-del-index">
+        <div class="footer-general">
             <hr> 
             <h1>TrankiPunki.com - Biografía</h1>
             <!-- Menú del footer-->
@@ -211,6 +212,7 @@
             </div>
     </footer>
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> 
 </body>
 </html>
