--- a/bio.html
+++ b/bio.html
@@ -19,10 +19,10 @@
     <!-- Encabezado -->
     <header>
         <!-- Menú con Bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-dark">
+            <div class="container-fluid menu-con-bootstrap">
                 <a href="index.html">
-                    <img class="logo-en-menu" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
+                    <img class="logo-tp" src="imagenes/tranki-punki-logo-header.svg" alt="Logo de tranki punki">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,14 +62,14 @@
             <hr>
         </nav>
     </header>
-    <!-- Título Imagen Responsive -->
+    <!-- Título Imagen  -->
     <div class="titulo">
-        <img class="titulo-sin-animacion" src="imagenes/tranki-punki-titulo.png" alt="Biografía de Tranki Punki">
+        <img class="titulo-tp" src="imagenes/tranki-punki-titulo.png" alt="Biografía de Tranki Punki">
     </div> 
     <!-- Artículo BIO -->  
     <article class="articulo-bio">
         <h2>BIO</h2>      
-        <p class="texto-en-bloque">Tranki Punki es una banda de <em>gypsy punk</em> nacida en 2013 en Córdoba, Argentina. Conformada por seis pibas y una vibrante combinación de distorsión y fiesta, se ha convertido en una de las propuestas más originales y convocantes de los escenarios locales, las marchas y los festivales vinculados a las problemáticas sociales actuales y laagenda feminista. Sus letras reflejan la realidad sociocultural, tocan temáticas feministas.</p>
+        <p class="texto-en-bloque">Tranki Punki es una banda de <em>gypsy punk</em> nacida en 2013 en Córdoba, Argentina.</p>
         <p class="texto-en-bloque">Conformada por seis pibas y una vibrante combinación de distorsión y fiesta, se ha convertido en una de las propuestas más originales y convocantes de los escenarios locales, las marchas y los festivales vinculados a las problemáticas sociales actuales y la agenda feminista.</p>
         <p class="texto-en-bloque">En sus siete años de trayectoria, su ecléctica impronta musical le ha permitido compartir escenario con bandas nacionales e internacionales en festivales y eventos de distinto tipo.</p>
         <p class="texto-en-bloque">Su música fusiona el gypsy punk con otros géneros como reggae, dub, ska y hardcore, por lo que sus presentaciones en vivo son poderosas y efectivas para el pogo y el baile descontracturado.</p>
@@ -81,7 +81,7 @@
     <!-- Grid de integrantes -->
     <section class="seccion-integrantes">
         <h3>Integrantes</h3>
-        <p class="texto-en-bloque-integrantes">Hacé click/tap en las imágenes de las integrantes y visitá sus perfiles de Instagram.</p>
+        <p class="texto-en-bloque-integrantes">Hacé click o tap en las imágenes de las integrantes y visitá sus perfiles de Instagram.</p>
         <main class="main">
             <div class="todas">
                 <a href="https://www.instagram.com/tranki_punki/" target="_blank">
@@ -143,14 +143,14 @@
     </section>
     <!-- Pie de página -->
     <footer>
-        <div class="footer-general">
+        <div class="pie-tp">
             <hr> 
             <h1>TrankiPunki.com - Biografía</h1>
             <!-- Menú del footer-->
             <nav class="nav-del-footer">
                 <ul class="nav-del-footer-main">
                     <li class="inicio-li">
-                        <a class="footer-nav-link" href="#">INICIO</a>
+                        <a class="footer-nav-link" href="index.html">INICIO</a>
                     </li>
                     <li class="bio-li">
                         <a class="footer-nav-link" href="bio.html">BIO</a>
