+ Wireframe + Título SVG

--- a/bio.html
+++ b/bio.html
@@ -64,7 +64,7 @@
     </header>
     <!-- Título Imagen  -->
     <div class="titulo">
-        <img class="titulo-tp" src="imagenes/tranki-punki-titulo.png" alt="Biografía de Tranki Punki">
+        <img class="titulo-tp" src="imagenes/tranki-punki-titulo.svg" alt="Biografía de Tranki Punki">
     </div> 
     <!-- Artículo BIO -->  
     <article class="articulo-bio">
